# loopfactory

./: .gitignore  PRD.md  README.md  config.yaml  pyproject.toml  requirements.txt  start_backend.sh
agents/.template/: ghost.template.md  shell.template.md
agents/aiwolf_447/: assi_bucks_post.md
api/: main.py  models.py
api/routers/: activity.py  agents.py  factory.py  metrics.py  pending.py  system.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: PendingAgentCard.tsx
dashboard/src/pages/: AgentDetail.tsx  Factory.tsx  GridView.tsx  Leaderboard.tsx  Overview.tsx  PendingActivation.tsx  Settings.tsx
mcn_core/: __init__.py  activation_monitor.py  activity_monitor.py  agent_factory.py  agent_profiles.py  agent_runner.py  analytics.py  concurrency_controller.py  config.py  database.py  heartbeat_manager.py  models.py  orchestrator.py  resource_monitor.py  scheduler.py  scheduling_policy.py  skill_manager.py  trend_analyzer.py
scripts/: migrate.py
